Added new resources tests
